[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accestime"
version = "0.1.0"
description = "SDK oficial Python para la API de AccesTime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AccesTime", email = "soporte@accestime.com" }]
keywords = ["accestime", "api", "sdk", "time-tracking", "hr", "payroll"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://docs.accestime.com"
Documentation = "https://docs.accestime.com/api-introduccion"
Source = "https://github.com/accestime/sdk-python"

[tool.setuptools.packages.find]
where = ["src"]
